3.6/mule-user-guide/datamapper-examples.adoc
= Anypoint DataMapper Examples
:keywords: datamapper

[NOTE]
DataMapper will continue to be fully supported in all current and future versions of Mule ESB 3.x, however it will be removed in Mule 4.0. We recommend that if you wish to take advantage of the new capabilities of link:https://developer.mulesoft.com/docs/display/current/DataWeave[DataWeave] or if you start new projects, upgrade now. However, if you have no pressing need to take advantage of new functionality, we recommend you wait until Mule 4.0 is released.

Many of the advanced capabilities of Anypoint DataMapper are best understood through examples. This page lists examples that illustrate using DataMapper in common but complex use cases. 

[width="100%",cols=",",options="header"]
|===
|Example |Description
|link:/documentation/display/current/DataMapper+Flat-to-Structured+and+Structured-to-Flat+Mapping[DataMapper Flat-to-Structured and Structured-to-Flat Mapping] |Shows how to build maps that extract from and populate complex, multiple-level nested structures.
|link:/documentation/display/current/DataMapper+Fixed+Width+Input+Format[DataMapper Fixed Width Input Format] |Two scenarios using DataMapper to extract data from fixed-width input files.
|link:/documentation/display/current/DataMapper+with+FlowRefLookup+Example[DataMapper Example: FlowRef Lookup with Salesforce.com] |Uses DataMapper's FlowRef Lookup Table, *DataSense* and *DataMapper* to map and transform data, thereby facilitating quick integration with Salesforce.
|link:/documentation/display/current/Legacy+Modernization+Example[Legacy Modernization Example] |Makes extensive use of rules for extracting data from nested structures, and translates requests from a SOAP web service for a file-based legacy application.
|link:/documentation/display/current/XML-only+SOAP+Web+Service+Example[XML-Only SOAP Web Service Example] |Demonstrates service orchestration and content-based routing. Based on the use case of patient admission into a hospital. Accepts SOAP requests, then orchestrates several Web services  to complete a business process.  Uses a DataMapper to map data from the responses from several internal hospital Web services to a response to send to the end user.
|===
